[gd_scene load_steps=4 format=2]

[ext_resource path="res://ProjectileEmitter.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/projEmitter2.0.png-a37f88b2abadddeed5978c029d71d641.stex"

[node name="ProjectileEmitter" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = SubResource( 2 )
hframes = 2
vframes = 3

[node name="exTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="emitTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_ProjectileEmitter_body_entered"]
[connection signal="timeout" from="exTimer" to="." method="_on_exTimer_timeout"]
[connection signal="timeout" from="emitTimer" to="." method="_on_emitTimer_timeout"]
